styles/phone.css
.hero-phone {
    position: relative;
    border-radius: 20px;
    box-shadow: 0 0 12px 8px rgba(0,0,0,0.4), -3px -2px 0 2px #000000, -5px -2px 0 3px #ffffff59, 0 0 0 10px black, 5px 0 0 10px black;
    border-top: 8px solid black;
    border-bottom: 8px solid black;
    background-color: white;
    width: 150px;
    height: 200px;

    transform: rotateY(-34deg) rotateZ(15deg) rotateX(5deg);
}

.hero-phone:before {
    position: absolute;
    z-index: 2;
    top: 0;
    left: 0;
    right: 0;
    display: block;
    margin: auto;
    width: 60px;
    height: 10px;
    border-radius: 0 0 4px 4px;
    background-color: black;
    content: '';
}

.hero-phone:after {
    position: absolute;
    z-index: -1;
    bottom: 30px;
    right: -0%;
    display: block;
    width: 50%;
    height: 80%;
    border-radius: 0 50% 20% 0;
    box-shadow: 0 15px 20px 20px rgba(0,0,0,0.4), 0 0 20px 50px rgba(0,0,0,0.2);
    content: '';

    transform: rotateZ(-5deg);
}

